--- a/index.html
+++ b/index.html
@@ -29,5 +29,19 @@
       <li class="chord">13</li>
       <li class="chord">M</li>
     </ul>
+    <ul class="keys">
+      <li class="key">C</li>
+      <li class="key">D&#x266d;</li>
+      <li class="key">D</li>
+      <li class="key">E&#x266d;</li>
+      <li class="key">E</li>
+      <li class="key">F</li>
+      <li class="key">G&#x266d;</li>
+      <li class="key">G</li>
+      <li class="key">A&#x266d; / G&#x2ddf;</li>
+      <li class="key">A</li>
+      <li class="key">B&#x266d;</li>
+      <li class="key">B</li>
+    </ul>
   </body>
 </html>
