--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Chord Game</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
+    <script src="jquery.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="app.js"></script>
   </head>
   <body>
     <ul class="chord-sequence">
