hide the whole thing at first

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </nav>
 
     <div class="container">
-      <div class="jumbotron">
-        <ul class="playlist">
+      <div class="jumbotron playlist">
+        <ul>
           <li class="playlist-item"><span class="chord">M</span></li>
           <li class="playlist-item"><span class="chord">min</span></li>
           <li class="playlist-item"><span class="chord">M</span></li>
