--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       </div>
     </nav>
 
-    <div class="container">
-      <div class="jumbotron playlist">
-        <ul>
+    <div class="container game">
+      <div class="jumbotron">
+        <ul class="playlist">
           <li class="playlist-item"><span class="chord">M</span></li>
           <li class="playlist-item"><span class="chord">min</span></li>
           <li class="playlist-item"><span class="chord">M</span></li>
@@ -70,6 +70,9 @@
           <li class="playlist-item"><span class="chord">13</span></li>
           <li class="playlist-item"><span class="chord">M</span></li>
         </ul>
+        <p>
+          <a class="btn btn-lg btn-primary start-game" href="#" role="button">Let's Go!</a>
+        </p>
       </div>
     </div>
   </body>
