--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="container game">
       <div class="jumbotron">
-        <ul class="playlist">
+        <ol class="playlist">
           <li class="playlist-item"><span class="chord">M</span></li>
           <li class="playlist-item"><span class="chord">min</span></li>
           <li class="playlist-item"><span class="chord">M</span></li>
@@ -69,7 +69,7 @@
           <li class="playlist-item"><span class="chord">M</span></li>
           <li class="playlist-item"><span class="chord">13</span></li>
           <li class="playlist-item"><span class="chord">M</span></li>
-        </ul>
+        </ol>
         <p>
           <a class="btn btn-lg btn-primary start-game" href="#" role="button">Let's Go!</a>
         </p>
