show the current key before the game starts

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li class="playlist-item"><span class="chord">M</span></li>
         </ol>
         <p>
-          <a class="btn btn-lg btn-primary start-game" href="#" role="button">Let's Go!</a>
+          <a class="btn btn-lg btn-primary start-game" href="#" role="button">Let's Go! <span class="current-key"></span></a>
         </p>
       </div>
     </div>
