--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="site.css">
-    <script src="jquery.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="jquery-2.2.4.js"></script>
+    <script src="bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
   </head>
   <body>
