fix another link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="bootstrap-3.3.6-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="site.css">
-    <script src="jquery-2.2.4.js"></script>
+    <script src="jquery-2.2.4.min.js"></script>
     <script src="bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
   </head>
